# rust_playground

./: .gitignore  Cargo.toml  README.md  encrypted_project.7z
app/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
app/migrations/: 20250506235650_init.sql
app/src/: blowfish.rs  blowfishv2.rs  config.rs  elevate.rs  enum_extractor.rs  env.template.json  error.rs  exercise_manager.rs  export_dump.rs  extractor_test.rs  lib.rs  loa_extractor.rs  lpk.rs  lpk_entry.rs  main.rs  models.rs  panic_hook.rs  process_dumper.rs  processor.rs  setup_app.rs  sql_migrator.rs  summary.txt  types.rs  utils.rs
app/src/disassembler/: core.rs  mod.rs  old.rs  stream.rs  types.rs  utils.rs
app/src/handlers/: exercise.rs  get_exercises copy.rs  get_exercises.rs  get_markdown.rs  load.rs  mod.rs  session.rs  update_session.rs
app/src/misc/: elevate.rs  enum_extractor.rs  export_dump.rs  lpk.rs  mod.rs
app/src/process/: memory.rs  mod.rs  snapshot.rs  thread.rs  thread_context.rs  types.rs  utils.rs
app/src/process_dumper/: dump.rs  memory.rs  mod.rs  modules.rs  process.rs  thread.rs  types.rs  utils.rs
app/src/processor/: cleanup_directory.rs  combine_db.rs  copy_files.rs  decrypt_upk.rs  disassemble_process.rs  dump_process.rs  extract_icons.rs  extract_lpk.rs  extract_pe.rs  mod.rs  parse_dump.rs
app/src/services/: app_ready_state.rs  mod.rs
app/src/sql_migrator/: db_merger.rs  duck_db.rs  mod.rs  queries.rs  sqlite_db.rs  table_schema.rs  types.rs  utils.rs
clap_spawn_process/: Cargo.toml
clap_spawn_process/sender/: Cargo.toml
clap_spawn_process/sender/src/: main.rs
clap_spawn_process/src/: client.rs  controller.rs  models.rs  server.rs
client_server/server/: Cargo.toml
client_server/server/src/: main.rs  utils.rs
decompiler/: Cargo.toml
decompiler/src/: lib.rs  main.rs
decompiler/src/decompiler/: analyser.rs  cfg_builder.rs  disassembler.rs  disassembler_stream.rs  loader.rs  mod.rs  stream.rs  types.rs  utils.rs
dis-asm/: Cargo.toml
dis-asm/.cargo/: config.toml
dis-asm/src/: crt.rs  main.rs  rt_main.rs
dll_lib_and_wrapper/dll_lib/: Cargo.toml
dll_lib_and_wrapper/dll_lib/src/: lib.rs  mpsc.rs  string.rs  tokio_mpsc.rs  trait_service.rs  vec.rs
duckdb_repository/: Cargo.toml  build.rs
duckdb_repository/src/: app_config.rs  custom_duration.rs  main.rs  models.rs  npc_type.rs  orchestrator.rs  simulator.rs
duckdb_repository/src/abstractions/: file_system.rs
duckdb_repository/src/db/: confrontation_repository.rs  hp_log_repository.rs  hp_session_repository.rs  migration.rs  mod.rs  npc_repository.rs  player_repository.rs  player_stats_repository.rs  raid_repository.rs  repository.rs  zone_repository.rs
duckdb_repository/src/migrations/: 0.1.0.sql  1_init.sql  2_data.sql
emulator/: Cargo.toml
emulator/src/: alu.rs  bus.rs  cpu.rs  decoder.rs  emulator.rs  flags.rs  main.rs  memory.rs  memory_region.rs  registers.rs  utils.rs
emulator/src/emulator/: alu.rs  bus.rs  cpu.rs  decoder.rs  emulator.rs  flags.rs  memory_region.rs  mod.rs  registers.rs  snapshot.rs  utils.rs
file_system_watcher/: Cargo.toml
file_system_watcher/src/: main.rs  utils.rs
mpsc/: Cargo.toml
mpsc/src/: main.rs
named_pipe_ipc/: Cargo.toml  README.md
named_pipe_ipc/server/: Cargo.toml
named_pipe_ipc/server/src/: main.rs
named_pipe_ipc/src/: main.rs
npcap_example/: Cargo.toml  README.md
npcap_example/src/: main.rs  wrapper.rs
packet_processor/: Cargo.toml
packet_processor/src/: app_state.rs  emitter.rs  game_state.rs  handler.rs  hp_log.rs  hp_log_manager.rs  interval_timer.rs  main.rs  models.rs  orchestrator.rs  packet.rs  process_checker.rs  processor.rs  producer.rs  settings_manager.rs  source.rs  utils.rs
peerpulse/: Cargo.toml
peerpulse/src/: main.rs
procedural_macro_runner/: Cargo.toml
procedural_macro_runner/src/: main.rs
projects/arc-mutex-thread-no-std/: Cargo.toml
projects/arc-mutex-thread-no-std/src/: arc.rs  arc_mutex.rs  main.rs  rwlock.rs  stack.rs  thread.rs
projects/custom-loggers/: Cargo.toml  README.md  build.rs  provider.man
projects/custom-loggers/src/: etw_logger.rs  main.rs  nt_file_logger.rs  time.rs
projects/dll-no-std/: Cargo.toml
projects/dll-no-std/src/: lib.rs
projects/ki-dispatcher-hook/: Cargo.toml
projects/multi-thread-runtime/: Cargo.toml
projects/nt-heap/: Cargo.toml
projects/nt-heap/src/: error.rs  flags.rs  heap.rs  main.rs
redirect_stdout/: Cargo.toml  README.md
redirect_stdout/src/: main.rs
simulator/: Cargo.toml
simulator/src/: main.rs
simulator/src/core/: bard.rs  boss.rs  event.rs  mod.rs  player.rs  template.rs  types.rs  utils.rs
sqlx_sqlite_example/: Cargo.toml  README.md
sqlx_sqlite_example/migrations/: 20250325233746_users.sql
sqlx_sqlite_example/src/: main.rs
sysinfo_netstat/: Cargo.toml
sysinfo_netstat/src/: aws_iprange.rs  emitter_listener.rs  hook.rs  main.rs  models.rs  process_watcher.rs  processor.rs  update_checker.rs
tokio_async_tests/: Cargo.toml  README.md
tokio_async_tests/src/: main.rs  rest_countries_api.rs
toolkit/: Cargo.toml
toolkit/src/: arc.rs  error.rs  futex.rs  helpers.rs  lib.rs  memory.rs  mutex.rs  nt_console.rs  ntdll.rs  static_vec.rs  syscalls.rs  u16_stack_string.rs  u8_stack_string.rs
toolkit/src/fs/: buf_writer.rs  file.rs  mod.rs  options.rs
toolkit/src/helpers/: alloc.rs  cmd_args.rs  environment.rs  exec_path.rs  misc.rs  mod.rs  peb.rs  process.rs  protect.rs  query.rs  reader.rs  thread_handle.rs  unicode_string.rs  writer.rs
toolkit/src/hook/: mod.rs
toolkit/src/io/: mod.rs  read.rs  seek.rs  write.rs
toolkit/src/logger/: mod.rs  nt_file_logger.rs
toolkit/src/rand/: chacha.rs  mod.rs  rand.rs
toolkit/src/stack_trait/: data_buf.rs  mod.rs  stack_trait.rs
toolkit/src/thread/: context.rs  error.rs  join.rs  mod.rs  packet.rs  stack.rs  (+2 more)
winapitest/: Cargo.toml
winapitest/src/: main.rs
windivert_data_inspect/: Cargo.toml
windivert_data_inspect/src/: main.rs  utils.rs
windivert_example/: Cargo.toml  README.md  build.rs
windivert_example/src/: consumer.rs  main.rs  processor.rs  wrapper.rs
(+500 files in other folders)
