[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
blowfish = "0.9.1"
aes = "0.8.4"
md5 = "0.8.0"
flate2 = "1.1.2"
anyhow = "1.0.75"
byteorder = "1.5.0"
tokio = { version = "1.46.1", features = ["full"] }
block-modes = "0.9.1"
sha2 = "0.10.9"
hex-literal = "1.0.0"
dotenvy = "0.15.7"
cipher = "0.4.4"
ecb = "0.1.2"
hex = "0.4.3"
chrono = { version = "0.4.31", features = ["serde"] }
rand = "0.9.0"
strum = "0.27"
strum_macros = "0.27"
crossbeam = "0.8.4"
log = "0.4.18"
flexi_logger = { version = "0.30.2", default-features = false }
encoding_rs = "0.8.35"
cbc = "0.1.2"
duckdb = "1.3.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
ntapi = "0.4.1"
widestring = "1.0"
bincode = "2.0.1"

[dependencies.windows]
version = "0.61.3"
features = [
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_WindowsProgramming",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]