[package]
name = "decompiler"
version = "0.0.1"
authors = ["Jozef Podlecki"]
edition = "2024"
rust-version = "1.88"

[lib]
name = "decompiler_lib"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.96"
log = "0.4"
flexi_logger = "0.30.1"
chrono = "0.4.31"
hex = "0.4.3"
byteorder = "1.5.0"
rand = "0.9.0"
capstone = "0.13"
object = "0.37.2"
ringbuffer = "0.16.0"