[package]
name = "duckdb_repository"
version = "0.1.0"
authors = ["Jozef Podlecki"]
edition = "2024"
rust-version = "1.85"

[dependencies]
r2d2 = "0.8.10"
duckdb = { version = "1.2.0", features = ["r2d2", "bundled"] }
uuid = { version = "1", features = ["v7"] }
chrono = "=0.4.38"
datafusion = "43.0.0"
arrow = "=53.2.0"