[package]
name = "emulator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.75"
byteorder = "1.5.0"
tokio = { version = "1.46.1", features = ["full"] }
block-modes = "0.9.1"
sha = "1.0.3"
hex-literal = "1.0.0"
dotenvy = "0.15.7"
cipher = "0.4.4"
ecb = "0.1.2"
hex = "0.4.3"
chrono = { version = "0.4.31", features = ["serde"] }
rand = "0.9.0"
log = "0.4.18"
flexi_logger = { version = "0.30.2", default-features = false }
decompiler = { path = "../decompiler" }
capstone = "0.13"
bincode = "2.0.1"
serde_json = { version = "1.0", features = ["preserve_order"] }