[package]
name = "file_system_watcher"
version = "0.1.0"
authors = ["Jozef Podlecki"]
edition = "2024"
rust-version = "1.85"
description = "Simple console app which watches settings json"
license = "MIT"
documentation = "https://docs.rs/my_crate"
homepage = "https://github.com/Jozefpodlecki/rust_playground"
repository = "https://github.com/Jozefpodlecki/rust_playground"


[dependencies]
uuid = { version = "1", features = ["v7"] }
chrono = "=0.4.38"
datafusion = "43.0.0"
arrow = "=53.2.0"
anyhow = "1.0.96"
notify = "8.0.0"
simple_logger = "5.0.0"
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
notify-debouncer-mini = "0.6.0"