[package]
name = "mscp"
version = "0.1.0"
authors = ["Jozef Podlecki"]
edition = "2024"
rust-version = "1.85"


[dependencies]
windivert = "0.6.0"
anyhow = "1.0.96"
log = "0.4"
simple_logger = "5.0.0"
flexi_logger = "0.30.1"
chrono = "0.4.31"
etherparse = "0.17"
hex = "0.4.3"
byteorder = "1.5.0"
crossbeam = "0.8.4"
crossterm = "0.29.0"
clap = { version = "4.5.31", features = ["derive"] }
rand = "0.9.0"