[package]
name = "npcap_example"
version = "0.1.0"
authors = ["Jozef Podlecki"]
edition = "2024"
rust-version = "1.85"

[dependencies]
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "signal", "time", "sync", "macros"] }
pcap = "2.2.0"
anyhow = "1.0.96"
log = "0.4"
simple_logger = "5.0.0"
default-net = "0.22.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"