[package]
name = "peerpulse"
version = "0.1.0"
edition = "2024"

[dependencies]
tar = "0.4.44"
netstat = "0.7.0"
ipnetwork = "=0.20.0"
libp2p = { version = "0.56.0", features = ["identify", "mdns", "macros", "noise", "ping", "rendezvous", "tcp", "tokio", "yamux"] }
pcap = { version = "2.3.0" }
etherparse = "0.19.0"
axum = { version = "0.8.6" }
oauth2 = "4.3"
notify = "8.1.0"
os_info = "3.12.0"
tokio = { version = "1.45.1", features = ["rt", "macros", "rt-multi-thread"] }
anyhow = "1.0.75"
log = "0.4.18"
flexi_logger = "0.30.1"