[package]
name = "procedural_macro_runner"
version = "0.1.0"
authors = ["Jozef Podlecki"]
edition = "2024"
rust-version = "1.85"

[dependencies]
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "signal", "time", "sync", "macros"] }
anyhow = "1.0.96"
log = "0.4"
simple_logger = "5.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0.1"
once_cell = "1.20.2"
rand = "0.9.0"
procedural_macros = { path = "../procedural_macros" }