[package]
name = "redirect_stdout"
version = "0.1.0"
authors = ["Jozef Podlecki"]
edition = "2024"
rust-version = "1.85"

[dependencies]
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "signal", "time", "sync", "macros"] }
anyhow = "1.0.96"
log = "0.4"
simple_logger = "5.0.0"
libc = "0.2.171"

[dependencies.windows]
version = "0.60"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Security"
]