[package]
name = "simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
blowfish = "0.9.1"
aes = "0.8.4"
md5 = "0.8.0"
flate2 = "1.1.2"
anyhow = "1.0.75"
byteorder = "1.5.0"
tokio = { version = "1.46.1", features = ["full"] }
block-modes = "0.9.1"
sha = "1.0.3"
hex-literal = "1.0.0"
dotenvy = "0.15.7"
cipher = "0.4.4"
ecb = "0.1.2"
hex = "0.4.3"
chrono = { version = "0.4.31", features = ["serde"] }
rand = "0.9.0"
strum = "0.27"
strum_macros = "0.27"
crossbeam = "0.8.4"
log = "0.4.18"
flexi_logger = { version = "0.30.2", default-features = false }