[package]
name = "tokio_async_tests"
version = "0.1.0"
authors = ["Jozef Podlecki"]
edition = "2024"
rust-version = "1.85"

[dependencies]
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "signal", "time", "sync", "macros"] }
anyhow = "1.0.96"
log = "0.4"
simple_logger = "5.0.0"
reqwest = { version = "0.12.14", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dotenv = "0.15.0"

[dev-dependencies]
mockito = "1.7.0"