[package]
name = "winapitest"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.75"
minidump = "0.26.0"

[dependencies.windows]
version = "0.61.3"
features = [
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_WindowsProgramming",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Kernel",
    "Win32_UI_Shell"
]
