[package]
name = "windivert_data_inspect"
version = "0.1.0"
authors = ["Jozef Podlecki"]
edition = "2024"
rust-version = "1.85"

[dependencies]
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "signal", "time", "sync", "macros"] }
windivert = "0.6.0"
anyhow = "1.0.96"
log = "0.4"
simple_logger = "5.0.0"
chrono = "0.4.31"
etherparse = "0.17"
hex = "0.4.3"
byteorder = "1.5.0"