[package]
name = "dll-lib"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.96"
log = "0.4"
rand = "0.9.0"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "signal", "time", "sync", "macros"] }
shared = { path = "../shared" }