cargo-features = ["profile-rustflags"]

[package]
name = "dll-no-std"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = false
codegen-units = 1        
debug = false            
debug-assertions = false 
overflow-checks = false  
incremental = false      
strip = "debuginfo"
rustflags = [
    "-C", "link-arg=/DEBUG:NONE",
    "-C", "link-arg=/EMITPOGOPHASEINFO",
    "-C", "link-arg=/OPT:REF",
    "-C", "link-arg=/OPT:ICF"
]