
[package]
name = "ki-dispatcher-hook"
version = "0.1.0"
edition = "2024"

[dependencies]
winapi = { version = "0.3.9", features = ["errhandlingapi", "minwinbase", "libloaderapi", "synchapi"] }
ntapi = { version = "0.4.3"}
iced-x86 = { version = "1.21.0", default-features = false, features = ["encoder", "decoder", "no_std"] }
toolkit = { path = "../../toolkit", features = ["alloc"] }
builtins = { path = "../../builtins" }
emballoc = "0.3.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"          
lto = false
codegen-units = 1        
debug = false            
debug-assertions = false 
overflow-checks = false  
incremental = false      
strip = "debuginfo"