cargo-features = ["profile-rustflags"]

[package]
name = "single-thread-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
emballoc = "0.3.0"
ntapi = "0.4.3"
utils = { path = "../../utils" }
winapi = { version = "0.3.9", features = [] }
heapless = "0.9.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
# opt-level = "z"          
# lto = false
# codegen-units = 1        
# debug = false            
# debug-assertions = false 
# overflow-checks = false  
# incremental = false      
# strip = "debuginfo"
# rustflags = [
#     "-C", "link-arg=/DEBUG:NONE",
#     "-C", "link-arg=/EMITPOGOPHASEINFO",
#     "-C", "link-arg=/OPT:REF",
#     "-C", "link-arg=/OPT:ICF",
#     # "-C", "link-arg=/MERGE:.rdata=.text",
# ]