cargo-features = ["profile-rustflags"]

[package]
name = "nt-heap"
version = "0.1.0"
edition = "2024"

[dependencies]
toolkit = { path = "../../toolkit" }
builtins = { path = "../../builtins" }
ntapi = "0.4.3"
winapi = { version = "0.3.9", features = ["errhandlingapi", "minwinbase", "winbase", "libloaderapi", "synchapi"] }
bitflags = "2.13.1"
heapless = "*"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"          
lto = false
codegen-units = 1        
debug = false            
debug-assertions = false 
overflow-checks = false  
incremental = false      
strip = "debuginfo"
rustflags = [
    "-C", "link-arg=/DEBUG:NONE",
    "-C", "link-arg=/EMITPOGOPHASEINFO",
    "-C", "link-arg=/OPT:REF",
    "-C", "link-arg=/OPT:ICF",
    # "-C", "link-arg=/MERGE:.rdata=.text",
]